# taxjar_erpnext

./: .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  feature_request.md
.github/helper/: install.sh  install_dependencies.sh  site_config.json
.github/workflows/: code-duplication.yml  generate-changelog.yml  lint.yaml  overrides.yml  pytest.yaml  release.yaml
docs/: index.md  integration.md  setup.md  troubleshooting.md
taxjar_erpnext/: __init__.py  hooks.py  install.py  modules.txt  patches.txt
taxjar_erpnext/config/: __init__.py
taxjar_erpnext/patches/v2_0/: migrate_settings_to_account.py
taxjar_erpnext/taxjar_erpnext/: taxjar_erpnext.py
taxjar_erpnext/taxjar_erpnext/custom/: item.json  item_default.json  sales_invoice_item.json
taxjar_erpnext/taxjar_erpnext/doctype/product_tax_category/: product_tax_category.js  product_tax_category.json
taxjar_erpnext/taxjar_erpnext/doctype/taxjar_account/: __init__.py  taxjar_account.js  taxjar_account.json  taxjar_account.py
taxjar_erpnext/taxjar_erpnext/doctype/taxjar_nexus/: taxjar_nexus.json
taxjar_erpnext/taxjar_erpnext/doctype/taxjar_settings/: taxjar_settings.json  taxjar_settings.py
taxjar_erpnext/tests/: conftest.py  constants.py  fixtures.py  sales_documents.py  setup.py  taxjar_client.py  test_sales_tax.py  test_taxjar_account.py
